backup db, create post